--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.acme</groupId>
-    <artifactId>websockets-quickstart</artifactId>
+    <artifactId>chat-withme</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <properties>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
